--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "jose": "^5.3.0",
+    "js-cookies": "^1.0.4",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.6.2",
     "next": "14.2.3",
