--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 MONGO_DB_URL=mongodb+srv://adamnurramadan:OgzMy5qG1GEaHObm@cluster0.wicveu4.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 DB_NAME=Blog
-NEXT_PUBLIC_BASE_URL=https://article-pro.vercel.app
+NEXT_PUBLIC_BASE_URL=http://localhost:3000
 JWT_SECRET="infoloker"
